# inochi

./: .gitignore  API.md  CLAUDE_CONTEXT.md  Cargo.toml  README.md  build.rs  serve.sh  wasm-build.sh
examples/: basic_simulation.rs  custom_forces.rs
presets/: classic_particle_life.json  gravity_system.json
src/: config.rs  forces.rs  full_lib.rs  lib.rs  main.rs  minimal_wasm.rs  particle.rs  presets.rs  renderer.rs  server.rs  spatial.rs  wasm.rs
www/: index.html  serve.py  test.html
